Sign up page UI updated

--- a/src/index.css
+++ b/src/index.css
@@ -30,11 +30,26 @@
 }
 
 .SignUp {
-    background-color: #4d90a1;
+    background-image: url("/public/images/sign up bg.jpg");
+    background-size: 100% 109%;
+    background-repeat: no-repeat;
     height: 100vh;
 }
 
-.SignUp-holder > .card {
-    background-color: #cdcbcb;
-    box-shadow: 0px 0px 10px 0px;
+.SignUp-holder>.card {
+    background-color: #dbdbdb;
+    /* box-shadow: 0px 0px 10px 0px; */
+}
+
+.SignUp-holder {
+    border: 1px solid black;
+}
+
+.SignUp-holder>.card.rounded-end {
+    border-radius: 0px 5px 5px 0px;
+}
+
+.SignUp-holder>.card.rounded-start {
+    border-radius: 5px 0px 0px 5px;
+    background-color: #3598db;
 }
